--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -221,6 +221,82 @@
             padding-top: 8px;
             margin-top: 8px;
         }
+
+        /* User Dropdown Styles */
+        .user-menu-container {
+            position: relative;
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            cursor: pointer;
+            height: 100%;
+        }
+
+        .user-menu-dropdown {
+            position: absolute;
+            top: 100%;
+            right: 0;
+            background: var(--bg-card);
+            border: 1px solid var(--border-subtle);
+            min-width: 180px;
+            display: none;
+            flex-direction: column;
+            z-index: 100;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+            margin-top: 8px;
+            /* Gap handling */
+        }
+
+        /* Invisible bridge to prevent menu closing when moving cursor */
+        .user-menu-container::after {
+            content: '';
+            position: absolute;
+            bottom: -8px;
+            left: 0;
+            right: 0;
+            height: 8px;
+        }
+
+        .user-menu-container:hover .user-menu-dropdown {
+            display: flex;
+        }
+
+        .user-menu-item {
+            padding: 12px 16px;
+            color: var(--text-muted);
+            text-decoration: none;
+            font-size: 0.85rem;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            transition: all 0.2s;
+            background: none;
+            border: none;
+            width: 100%;
+            text-align: left;
+            font-family: var(--font-mono);
+            cursor: pointer;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+        }
+
+        .user-menu-item:last-child {
+            border-bottom: none;
+        }
+
+        .user-menu-item:hover {
+            background: var(--bg-card-hover);
+            color: var(--text-main);
+            padding-left: 20px;
+            /* Slide effect */
+        }
+
+        .user-menu-item.highlight {
+            color: var(--accent);
+        }
+
+        .user-menu-item.danger:hover {
+            color: #ff4444;
+        }
     </style>
 </head>
 
@@ -244,6 +320,20 @@
     </header>
 
     <main class="main-content">
+        <!-- Storage Usage Widget -->
+        <div id="storageWidget"
+            style="margin-bottom: 20px; font-family: var(--font-mono); font-size: 0.8rem; color: var(--text-muted); display: none;">
+            <div style="display: flex; justify-content: space-between; margin-bottom: 6px;">
+                <span>Storage Usage</span>
+                <span id="storageText">0 / 0 MB</span>
+            </div>
+            <div
+                style="width: 100%; height: 6px; background: rgba(255,255,255,0.1); border-radius: 3px; overflow: hidden;">
+                <div id="storageBar"
+                    style="width: 0%; height: 100%; background: var(--accent); transition: width 0.3s;"></div>
+            </div>
+        </div>
+
         <div class="upload-area" id="dropZone">
             <h3 style="margin-bottom: 8px; font-weight: 500;">Upload SVG</h3>
             <p style="font-size: 0.9em;">Drag & Drop or Click to Select</p>
